--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button onclick="compute()">Compute Interest</button>
         </div>
         <footer>
-            &#169; This Calculator belongs to --your name--
+            &#169; This Calculator belongs to Bharat Rathavi
         </footer>
     </body>
 </html>
